--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "db:latest": "knex migrate:latest",
+    "db:undo": "knex migrate:rollback"
   },
   "keywords": [],
   "author": "Lambda School",
